--- a/CSS/home.css
+++ b/CSS/home.css
@@ -11,21 +11,21 @@ body
 {
     height: 100vh;
     width: 100%;
-    background: linear-gradient(rgba(4,9,30,0.9),rgba(4,9,30,0.9)) ,url('bg\ img.png');
+    background: linear-gradient(rgba(4,9,30,0.9),rgba(4,9,30,0.9)) ,url('../Images/bg\ img.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #333;
+    
 
 }
 
 
 .box
 {
-    background: rgba(255, 255, 255, 0.9);
+    background:gainsboro;
     padding: 40px;
     border-radius: 15px;
     text-align: center;
@@ -36,21 +36,21 @@ body
 
 .box:hover 
 {
-    transform: scale(1.10);
-    box-shadow: 0 3px 4px whitesmoke;
+    transform: scale(1.12);
+    box-shadow: 0 3px 4px black;
 }
 
 .box h1 
 {
     font-size: 32px;
-    color: #3e4684;
+    color:navy;
     margin-bottom: 15px;
 }
 
 .box p 
 {
     font-size: 16px;
-    color: #555;
+    color:black;
     margin-bottom: 25px;
 }
 
@@ -66,13 +66,13 @@ body
 .btns a 
 {
     text-decoration: none;
-    background: darkslategray;
+    background: navy;
     color: white;
     padding: 15px 28px;
     border-radius: 20px;
     font-size: 15px;
     font-weight: bold;
-    transition: background 0.3s, transform 0.3s;
+    transition:0.3s;
     width: 200px;
     text-align: center;
 }
@@ -87,13 +87,13 @@ footer
 {
     margin-top: 30px;
     font-size: 13px;
-    color: #888;
+    color:black;
     font-weight:bold;
 }
 
 footer a 
 {
-    color: #3e4684;
+    color:navy;
     text-decoration: none;
 }
 
