--- a/CSS/log.css
+++ b/CSS/log.css
@@ -9,7 +9,7 @@ body
 {
     height: 100vh;
     width: 100%;
-    background: linear-gradient(rgba(4,9,30,0.9),rgba(4,9,30,0.9)),url('bg\ img.png');
+    background: linear-gradient(rgba(4,9,30,0.9),rgba(4,9,30,0.9)),url('../Images/bg\ img.png ');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -27,19 +27,20 @@ body
 
 .box
 {
-    background:gainsboro;
+    background:darkgrey;
     width:420px;
     height: auto;
     padding: 30px 40px;
     border-radius: 10px;
-    box-shadow: 0 0 3px 2px whitesmoke;
+    box-shadow: 0 0 3px 2px black;
+    
 }
 
 .box h1
 {
     font-size: 33px;
     text-align: center;
-    color: darkblue;
+    color:navy;
 }
 
 .box .user
@@ -70,15 +71,15 @@ body
 
 .user input:hover
 {
-    border:1px solid darkslateblue;
-    box-shadow: 0 0 2px 2px whitesmoke;
+    border:2px solid navy;
+    
 }
 
 .box .remember
 {
     display: flex;
     justify-content: space-between;
-    font-size: 14.5px;
+    font-size: 15px;
     margin: -15px 0 15px;
 }
 
@@ -91,12 +92,12 @@ body
 
 .remember label
 {
-    color: darkslateblue;
+    color: black;
 }
 
 .remember a
 {
-    color: darkblue;
+    color:black;
     text-decoration: none;
 }
 
@@ -109,7 +110,7 @@ body
 {
     width:100%;
     height: 38px;
-    background: darkblue;
+    background: navy;
     border: none;
     outline: none;
     border-radius: 40px;
@@ -127,7 +128,7 @@ body
 
 .box .register
 {
-    font-size: 16px;
+    font-size: 17px;
     text-align: center;
     margin-top: 20px;
     
@@ -135,7 +136,7 @@ body
 
 .register p a
 {
-    color: darkblue;
+    color:navy;
     text-decoration: none;
     font-weight: 600;
     margin-left: 5px;
