--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,7 +10,7 @@
 {
     height:100vh;
     width:100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("bg\ img.png");
+    background-image: linear-gradient(rgba(4,9,30,0.8),rgba(4,9,30,0.8)),url("../Images/bg\ img.png");
     background-position: center;
     background-size: cover;
     position: relative;
@@ -25,9 +25,9 @@ nav
     align-items:  center;
     padding: 9px 45px;
     position:fixed;
-    box-shadow: 0px 0px 12px 25px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 1px 2px rgba(0,0,0,0.1);
     background: rgba(0,0,0,0.1);
-    backdrop-filter: blur(25px);
+    backdrop-filter: blur(40px);
     width:100%;
     top:0;
     left:0;
@@ -67,7 +67,7 @@ nav
 .links ul li a
 {
       box-sizing: border-box;
-      padding: 8px 20px;
+      padding: 10px 25px;
       background-color:darkslategray;
       border: 2px solid darkslategray;
       color: whitesmoke;
@@ -77,6 +77,7 @@ nav
       cursor: pointer;
       text-decoration: none;
       list-style:none;
+      transition: 0.3s;
       
 }
 
