--- a/CSS/offer pool.css
+++ b/CSS/offer pool.css
@@ -9,7 +9,7 @@
 body 
 {
 
-    background: linear-gradient(rgba(4,9,30,0.9),rgba(4,9,30,0.9)), url('bg\ img.png');
+    background: linear-gradient(rgba(4,9,30,0.9),rgba(4,9,30,0.9)), url('../Images/bg\ img.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -24,30 +24,32 @@ body
 
 .box
 {
-    background: gainsboro;
-    width: 90%;
+    background:darkgrey;
+    height: auto;
     max-width: 500px;
     border-radius: 15px;
-    box-shadow: 0 8px 6px white;
+    box-shadow: 0 14px 6px black;
     overflow: hidden;
     margin-top: 20px;
-    padding: 20px;
+    padding: 14px 20px ;
+    
 }
 
 
 .head
 {
-    text-align: center;
-    background: #0d47a1; 
+    
+    background:navy; 
     color: white;
     border-radius: 10px;
-    padding: 14px 10px;
+    padding: 12px 10px;
     margin-bottom: 15px;
 }
 
 .head h1 
 {
     font-size: 20px;
+    text-align: center;
     
 }
 
@@ -59,14 +61,14 @@ body
     background:lavender;
     padding: 12px 15px;
     border-radius: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 13px;
     
 }
 
 .menu a 
 {
     text-decoration: none;
-    color: #0d47a1; 
+    color:navy; 
     font-weight: bold;
     font-size: 16px;
 }
@@ -76,8 +78,8 @@ body
     box-sizing: border-box;
     border: 1px solid white;
     background: white;
-    padding:3px 8px;
-    border-radius: 8px;
+    padding:3px 15px;
+    
 }
 
 
@@ -90,7 +92,7 @@ body
 {
     font-size: 18px;
     margin-bottom: 8px;
-    color: #0d47a1; 
+    color:navy;
 }
 
 .content p 
@@ -111,20 +113,20 @@ body
     color: black;
 }
 
-.inputs input, .inputs select 
+.inputs input, .inputs select
 {
     width:80%;
     padding: 12px 35px;
     font-size: 14px;
-    border: 1px solid #e0e0e0;
-    border-radius: 8px;
-    background: #f9f9f9; 
+    border: 1px solid lavender;
+    border-radius: 10px;
+    background:white; 
     transition: all 0.3s ease;
 }
 
 .inputs input:focus, .inputs select:focus 
 {
-    border-color: #0d47a1; 
+    border:2px solid navy;
     box-shadow: 0 0 5px rgba(13, 71, 161, 0.3); 
     background: white;
     outline: none;
@@ -133,22 +135,22 @@ body
 
 .btn
 {
-    width: 100%;
+    width: 90%;
     padding: 12px;
-    background: #0d47a1; 
+    background:navy;
     color: white;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 600;
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    transition: background 0.3s ease, transform 0.2s ease;
+    transition: 0.3s;
 }
 
 .btn:hover 
 {
-    background: #093a8a; 
-    transform: translateY(-2px); 
+    
+    transform: translateY(-3px); 
 }
 
 .map-placeholder iframe 
