--- a/static/CSS/home.css
+++ b/static/CSS/home.css
@@ -11,7 +11,7 @@ body
 {
     height: 100vh;
     width: 100%;
-    background: linear-gradient(rgba(4,9,30,0.9),rgba(4,9,30,0.9)) ,url('../Images/bg\ img.png');
+    background: linear-gradient(rgba(4,9,30,0.9),rgba(4,9,30,0.9)) ,url('../Images/bg_img.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
