--- a/static/CSS/main.css
+++ b/static/CSS/main.css
@@ -10,7 +10,7 @@
 {
     height:100vh;
     width:100%;
-    background-image: linear-gradient(rgba(4,9,30,0.8),rgba(4,9,30,0.8)),url("../Images/bg\ img.png");
+    background-image: linear-gradient(rgba(4,9,30,0.8),rgba(4,9,30,0.8)),url("../Images/bg_img.png");
     background-position: center;
     background-size: cover;
     position: relative;
