--- a/static/CSS/sign.css
+++ b/static/CSS/sign.css
@@ -9,7 +9,7 @@ body
 {
     height: 100vh;
     width:100%;
-    background: linear-gradient(rgba(4,9,30,0.9), rgba(4,9,30,0.9)) ,url('../Images/bg\ img.png');
+    background: linear-gradient(rgba(4,9,30,0.9), rgba(4,9,30,0.9)) ,url('../Images/bg_img.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -109,3 +109,25 @@ body
     transform: translateY(-3px);
     
 }
+
+.footer
+{
+    margin-top: 6px;
+    text-align: center;
+}
+.footer p
+{
+    font-size: 16px;
+}
+.footer p a
+{
+    text-decoration: none;
+    color: navy;
+    font-weight: bold;
+}
+
+.footer p a :hover
+{
+    text-decoration: underline;
+}
+
