--- a/Templates/log.html
+++ b/Templates/log.html
@@ -59,15 +59,15 @@
             {% endwith %}
             
 
-            <form action="/log" method="post">
+            <form action="/log" method="post" autocomplete="off">
 
                 <h1>Login</h1>
                 <div class="user">
-                    <input type="text" name="email" placeholder="Email" required>
+                    <input type="text" name="email"  placeholder="Email"  autocomplete="off"  required>
                 </div>
 
                 <div class="user">
-                    <input type="password" name="password" placeholder="password" required>
+                    <input type="password" name="password" placeholder="password" autocomplete="new-password" required>
                 </div>
 
                 <div class="remember">
